# MVS_Group

./: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c0544ba5fae_create_images_table.py
src/: log_config.py  main.py  settings.py
src/api/: app.py  router.py
src/bd/: database.py  dto.py  models.py
src/services/: image_processor.py  mage_saver.py
tests/: conftest.py  database.py
tests/api/: test_get_image_id.py  test_get_images.py  test_upload_image.py
